#116 JIRA/ User Manual Implementation: One Mean Hypothesis Testing

--- a/savis4/src/app/user-manual/user-manual.component.html
+++ b/savis4/src/app/user-manual/user-manual.component.html
@@ -18,6 +18,7 @@
       <img src="assets/User-Manual-OPHT2.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
     </div>
   </div>
+
   <div class="content">
     <div class="text-section">
       <h3 style="font-size: 2rem;">{{'uman_hyp_testing_subtitle2' | translate}}</h3>
@@ -34,6 +35,26 @@
     </div>
   </div>
 
+  <div class="content">
+    <div class="text-section">
+      <h3 style="font-size: 2rem;"> One Mean Hypothesis Testing</h3>
+      
+      <div class="green-box">
+        <p> 
+          The One Mean Hypothesis Test tool allows users to examine how sample means compare to a population mean through repeated random sampling. Users begin by entering or uploading a dataset, after which the system calculates the population mean, standard deviation, and sample size. The input data are displayed graphically to provide an overview of the distribution before sampling begins.<br><br>
+          In the second section, users specify the sample size and the number of simulations to run. Each simulation randomly selects values from the dataset and calculates a sample mean, which is plotted on the chart. The last sample drawn is highlighted in blue, and the sidebar reports its mean and standard deviation. This step demonstrates how the choice of sample size and number of simulations influences variation in the results.<br><br>
+          The final section displays the distribution of sample means across all simulations. Users can define a minimum and maximum interval to highlight where sample means fall inside the range (green) or outside the range (red). The sidebar also summarizes key statistics, including the overall mean of the sample means, their standard deviation, and the proportion of means within the selected interval. This functionality helps users visualize confidence intervals and assess whether results support or deviate from the null hypothesis.<br><br>
+        </p>
+      </div>
+    </div>
+    
+    <div class="image-section">
+      <img src="assets/User-Manual-OMHT1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/User-Manual-OMHT2.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/User-Manual-OMHT3.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+    </div>
+  </div>
+  
   <div class="content">
     <div class="text-section">
       <h4 style="font-size: 2rem;"> Graphs</h4>
