#115 JIRA / Clean-up website Cleaned up the SAVIS website with minor changes as per my JIRA task, including: - Bottom of website says Copyright @2025 CSUS - Continue as Guest button is available on the sign up page - Calculator button is removed from navigation bar

--- a/savis4/src/app/components/signup/signup.component.html
+++ b/savis4/src/app/components/signup/signup.component.html
@@ -60,6 +60,7 @@
                                 <small *ngIf="errorMessage" class="signUpErrorMessage">{{errorMessage}}</small>
                                 <small *ngIf="successMessage" class="signUpSuccessMessage">{{successMessage}}</small>
                             </div>
+                            <button (click)="guestOnSubmit()" type="submit" class="btn-guest" >{{"ContinueAsGuest" | translate}}</button>
                             <div class="loginButton text-gray-500">{{"AlreadyHaveAccount" | translate}}? <a id="forget" routerLink="/login">{{"Login" | translate}}</a></div>
                         </form>
                     </div>
