--- a/savis4/src/app/components/signup/signup.component.scss
+++ b/savis4/src/app/components/signup/signup.component.scss
@@ -155,6 +155,7 @@ input[type='text'] {
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone;
     }
+
 }
 
 .loginButton {
@@ -184,6 +185,24 @@ input[type='text'] {
 
     ::ng-deep span {
         color: #54c242 !important;
+    }
+}
+
+.btn-guest {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    border: none;
+    border-radius: 15px;
+    background-color: #54c242;
+    color: #fff;
+    padding: 15px 40px; /* Increased padding for a bigger button */
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: block; /* Make it a block-level element */
+    margin-left: auto; /* Center the button horizontally */
+    margin-right: auto;
+    &:hover {
+        background-color: #388e3c;
     }
 }
 
