--- a/savis4/src/app/user-manual/user-manual.component.html
+++ b/savis4/src/app/user-manual/user-manual.component.html
@@ -3,57 +3,55 @@
 <div class="user-manual-container">
   <h1 class="title">{{'uman_title' | translate}}</h1>
   <div class="content">
-    <div class="text-section">
-      <h2 style="font-size: 2rem;">{{'uman_hyp_testing_title' | translate}}</h2>
-      <h3 style="font-size: 2rem;">{{'uman_hyp_testing_subtitle1' | translate}}</h3>
 
-      <div class="green-box">
-        <p [innerHTML]="'uman_hyp_testing_par1' | translate"></p>
+    <div class="box-container">
+      <div class="column">
+        <div class="tool1">{{ "uman_Hypothesis_Testing" | translate }}</div>
+        <div class="box" routerLink="/opht">
+          {{ "uman_opht" | translate }}
+        </div>
+        <div class="box" routerLink="/tpht">
+          {{ "uman_tpht" | translate }}
+        </div>
+        <div class="box" routerLink="/omht">
+          {{ "uman_omht" | translate }}
+        </div>
+        <div class="box" routerLink="/tmht">
+          {{ "uman_tmht" | translate }}
+        </div>
       </div>
 
-    </div>
-
-    <div class="image-section">
-      <img src="assets/User-Manual-OPHT1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
-      <img src="assets/User-Manual-OPHT2.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
-    </div>
-  </div>
-  <div class="content">
-    <div class="text-section">
-      <h3 style="font-size: 2rem;">{{'uman_hyp_testing_subtitle2' | translate}}</h3>
-
-      <div class="green-box">
-        <p [innerHTML]="'uman_hyp_testing_par2' | translate"></p>
+      <div class="column">
+        <div class="tool2">{{ 'uman_Graphs' | translate }}</div>
+        <div class="box2" routerLink="/bar-chart">{{ 'uman_bar-chart' | translate }}</div>
+        <div class="box2" routerLink="/dot-plot">{{ 'uman_dot-plot' | translate }}</div>
       </div>
 
-    </div>
+      <div class="column">
+        <div class="tool3">{{ "uman_Regression" | translate }}</div>
+        <div class="box3" routerLink="/regression">
+          {{ "uman_regression" | translate }}
+        </div>
+        <div class="box3" routerLink="/correlation-manual">
+          {{ "uman_correlation" | translate }}
+        </div>
+      </div>
 
-    <div class="image-section">
-      <img src="assets/User-Manual-TPHT1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
-      <img src="assets/User-Manual-TPHT2.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
-    </div>
-  </div>
-
-  <div class="content">
-    <div class="text-section">
-      <h4 style="font-size: 2rem;"> Graphs</h4>
-      <h5 style="font-size: 2rem;"> Bar Chart</h5>
-      
-      <div class="green-box">
-        <p>The Bar Chart tool helps users compare and organize data visually. There are two ways to use the Bar Chart tool. <br><br>
-          The first way is to directly type the data into the box that says “Please enter data or drop column titles from CSV file here”. It is also important to note that the data must be entered vertically. For example, do not enter multiple data points next to each other. Instead, after typing a data point, press enter to type the next data point on a new row. After typing all the data points, click on the “Load Data” button. <br><br>
-          The second way is to upload a CSV file. To do this, click on the “Upload Data File” button. The user’s file folder in their computer will pop up. From here, double click on a CSV file. It is also important to note that in the CSV file, each data point should be in different rows under the same column. After double clicking on the CSV file, the data points in the chosen CSV file should appear on the box that says “Please enter data or drop column titles from CSV file here”. Then, click on the “Load Data” button.<br><br>
-          In addition, users can click on the “Examples” drop-down box to get example data points. Users can choose Example1 or Example2 then click on the “Load Data” button.<br><br>
-          The x-axis of the bar chart represents the data points that the user entered. The y-axis of the bar chart represents the proportion, which is the number of times a specific data point appears divided by the total number of the data points there are in the data. After uploading the data, there is a frequency table next to the bar chart, which gives more information about the data in terms of frequency.<br><br>
-          Lastly, there is a Draw Sample section. Users can type the number they would like for the sample size. Users can also click on the up or down arrow in the box to increase or decrease the number for the sample size. After entering a number in the sample size box, click on the “Run Simulation” button. This makes new samples based on the sample size given using the data points from the bar chart that the user entered.
-          <p>
-      </div>   
-    </div>
-
-    <div class="image-section">
-      <img src="assets/usermanual-barchart1.png" alt="Input Data" class="screenshot" style="margin-top: 400px; width: 900px; height:350px;"/>   
-      <img src="assets/usermanual-barchart2.png" alt="Draw Samples" class="screenshot" style="width:900px; height: 350px"/>
-       <p>An example of using the Bar Chart tool<p>
+      <div class="column">
+        <div class="tool4">{{ "uman_Confidence_Interval" | translate }}</div>
+        <div class="box4" routerLink="/opci">
+          {{ "uman_opci" | translate }}
+        </div>
+        <div class="box4" routerLink="/tpci">
+          {{ "uman_tpci" | translate }}
+        </div>
+        <div class="box4" routerLink="/omci">
+          {{ "uman_omci" | translate }}
+        </div>
+        <div class="box4" routerLink="/tmci">
+          {{ "uman_tmci" | translate }}
+        </div>
+      </div>
     </div>
   </div>   
   <p></p>
