--- a/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.scss
+++ b/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.scss
@@ -297,5 +297,7 @@ $slider-track-color: #bfbfbf;
 }
 
 h1 {
+  margin-bottom: var(--third-col);
+  color: var(--second-col);
   font-weight: bold;
 }
