--- a/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
+++ b/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
@@ -2,7 +2,7 @@
 <div class="two-proportions">
   <h1 class="text-center">{{ "tpci_title" | translate }}</h1>
 
-  <h2>1. {{ "tpci_enter_data" | translate }}</h2>
+  <h2 style="margin-top:16px;">1. {{ "tpci_enter_data" | translate }}</h2>
   <input type="checkbox" style="float: right" checked />
   <div id="input-section" class="section">
     <div class="lhs">
