--- a/savis4/src/app/features/bar-chart/bar-chart.component.scss
+++ b/savis4/src/app/features/bar-chart/bar-chart.component.scss
@@ -10,11 +10,14 @@
     h1 {
       font-weight: bold;
       color:var(--second-col);
+      margin-top: 8px;
+      margin-bottom: 32px;
     }
 
-    h3 {
-      font-weight: bold;
+    h2 {
+      //font-weight: bold;
       color:var(--second-col);
+      padding-top: 16px;
     }
 
     h4 {
