--- a/savis4/src/app/features/correlation/correlation.component.scss
+++ b/savis4/src/app/features/correlation/correlation.component.scss
@@ -1,6 +1,7 @@
 .p-4{
   background-color: var(--fifth-col);
   padding-bottom: 100px;
+  padding-top: 40px;
 }
 .static-footer {
     position: fixed;
