--- a/savis4/src/app/features/dot-chart/dot-chart.component.scss
+++ b/savis4/src/app/features/dot-chart/dot-chart.component.scss
@@ -2,9 +2,9 @@
   background-color: var(--fifth-col);
   padding: 20px;
 
-    h3 {
+    h2 {
+      padding-top: 16px;
       color:var(--second-col);
-      font-weight: bold;
       margin-top: 1ch;
       width: 100%;
       .toggle-box {
@@ -14,6 +14,7 @@
     h1 {
       font-weight: bold;
       color:var(--second-col);
+      margin-top: 8px;
     }
     .chart-input-form {
       color:var(--sixth-col);
