--- a/savis4/src/app/features/one-mean-ci/one-mean-ci.component.scss
+++ b/savis4/src/app/features/one-mean-ci/one-mean-ci.component.scss
@@ -192,9 +192,8 @@
   padding: 20px;
   background-color:var(--fifth-col);
 
-    h3 {
+    h2 {
       color:var(--second-col);
-      font-weight: bold;
       margin-top: 1ch;
       width: 100%;
       .toggle-box {
@@ -204,6 +203,7 @@
     h1 {
       color:var(--second-col);
       font-weight: bold;
+      padding-top: 8px;
     }
     .chart-input-form {
       color:var(--second-col);
