--- a/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
+++ b/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
@@ -4,7 +4,7 @@
     <div class="title2">
         <h1>{{ 'opc_title' | translate }}</h1>
     </div>
-    <div class="title3"><h2>1. {{ 'opc_data' | translate }}</h2></div>
+    <div class="title3" style="margin-top:16px;"><h2>1. {{ 'opc_data' | translate }}</h2></div>
     <!-- <input type="checkbox" style="float:right" checked/> -->
     <div id="input-section" class="section">
         <div class="lhs">
