--- a/savis4/src/app/features/two-means-ci/two-means-ci.component.scss
+++ b/savis4/src/app/features/two-means-ci/two-means-ci.component.scss
@@ -9,8 +9,20 @@ $stat-block-width: calc(50% - 1rem);
   padding-bottom: 100px;
 }
 //#two-mean {
-  h1,
-  h2,
+
+  h1 {
+    margin-bottom: var(--third-col);
+    color: var(--second-col);
+    font-weight: bold;
+    padding-top: 8px;
+  }
+  
+  h2{
+    padding-top: 40px;
+    margin-bottom: $section-spacing;
+    color:var(--second-col);
+  }
+
   h3, p, label {
     margin-bottom: $section-spacing;
     color:var(--second-col);
