--- a/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.scss
+++ b/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.scss
@@ -1,6 +1,16 @@
 .two-proportions {
   background-color: var(--fifth-col);
   padding-bottom: 100px;
+
+
+  h1 {
+    margin-bottom: var(--third-col);
+    color: var(--second-col);
+    font-weight: bold;
+    margin-top: 32px;
+  }
+
+
   h2 {
     color:var(--second-col);
     margin-left: 1em;
