--- a/savis4/src/app/features/correlation/correlation.component.html
+++ b/savis4/src/app/features/correlation/correlation.component.html
@@ -1,4 +1,16 @@
 <app-navbar></app-navbar>
+
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/correlation-manual']">
+       Correlation Component Guide
+  </button>
+</div>
+
+
 <div class="p-4">
   <h1 class="text-2xl font-bold mb-2 text-center">
     {{ "correlation_correlation_component" | translate }}
