--- a/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
+++ b/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
@@ -1,5 +1,15 @@
 <app-navbar></app-navbar>
 
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/opci']">
+        One Proportion Confidence Interval Guide
+  </button>
+</div>
+
 <div class="one-proportion-ci">
     <div class="title2">
         <h1>{{ 'opc_title' | translate }}</h1>
