--- a/savis4/src/app/features/two-means-ci/two-means-ci.component.html
+++ b/savis4/src/app/features/two-means-ci/two-means-ci.component.html
@@ -1,4 +1,14 @@
 <app-navbar></app-navbar>
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/tmci']">
+        Two Mean Confidence Interval Guide
+  </button>
+</div>
+
 <div class="p-4">
   <h1 class="text-xl font-bold text-center my-5">{{ 'Tmci_Two_Means_Confidence_Interval' | translate }}
   </h1>
