--- a/savis4/src/app/features/dot-chart/dot-chart.component.html
+++ b/savis4/src/app/features/dot-chart/dot-chart.component.html
@@ -1,4 +1,17 @@
 <app-navbar></app-navbar>
+
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/dot-plot']">
+       Dot Plot Guide
+  </button>
+</div>
+
+
+
 <body class="flex flex-col min-h-screen">
 <div id="dot-chart-tutorial">
     <h1 class="text-center">{{ 'dotPlot_title' | translate }}</h1>
