--- a/savis4/src/app/features/linear-regression/linear-regression.component.scss
+++ b/savis4/src/app/features/linear-regression/linear-regression.component.scss
@@ -100,3 +100,18 @@
   .btn:hover{
     background: var(--fourth-col);
   }
+
+.manual-link {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0.5rem 1rem 0;  
+    margin-top: 16px;
+    margin-bottom: 0.5rem;  
+}
+
+.manual-btn {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.4rem;
+}
