--- a/savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
+++ b/savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
@@ -1,4 +1,15 @@
 <app-navbar></app-navbar>
+
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/omci']">
+        One Mean Confidence Interval Guide
+  </button>
+</div>
+
 <body class="flex flex-col min-h-screen">
 <div id="dot-chart-tutorial">
     <h1 class="text-center">{{ '//omci_One_Mean_Confidence_Interval' | translate }}</h1>
