--- a/savis4/src/app/features/one-proportion/one-proportion.component.html
+++ b/savis4/src/app/features/one-proportion/one-proportion.component.html
@@ -1,4 +1,15 @@
 <app-navbar></app-navbar>
+
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/opht']">
+        One Proportion Hypothesis Testing Guide
+  </button>
+</div>
+
 <div class="oneProportion">
   <div class="left-container">
     <div class="controls">
