--- a/savis4/src/app/features/two-means/two-means.component.html
+++ b/savis4/src/app/features/two-means/two-means.component.html
@@ -1,4 +1,15 @@
 <app-navbar></app-navbar>
+
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/tmht']">
+        Two Mean Hypothesis Testing Guide
+  </button>
+</div>
+
 <div class="p-4">
   <h1 class="text-xl font-bold text-center my-5">{{'two_mean_title' | translate }}  </h1>
   <div class="flex justify-between">
