--- a/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
+++ b/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
@@ -1,4 +1,14 @@
 <app-navbar></app-navbar>
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/tpci']">
+        Two Proportion Confidence Interval Guide
+  </button>
+</div>
+
 <div class="two-proportions">
   <h1 class="text-center">{{ "tpci_title" | translate }}</h1>
 
