--- a/savis4/src/app/features/two-proportions/two-proportions.component.html
+++ b/savis4/src/app/features/two-proportions/two-proportions.component.html
@@ -1,4 +1,15 @@
 <app-navbar></app-navbar>
+
+<!--link to user manual -->
+<div class="manual-link">
+  <button
+    class="btn manual-btn"
+    type="button"
+    [routerLink]="['/tpht']">
+        Two Proportion Hypothesis Testing Guide
+  </button>
+</div>
+
 <div class="p-4">
   <div id="two-proportions" class="mb-4">
     <h1 class="text-xl font-bold text-center my-5">{{ 'two_prop_title' | translate }}</h1>
