--- a/savis4/src/app/user-manual/user-manual-components/opci/opci.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/opci/opci.component.html
@@ -13,7 +13,9 @@
     </div>
 
     <div class="image-section">
-      <img src="assets/User-Manual-OPHT1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/usermanual-OPCI-1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/usermanual-OPCI-2.png" alt="Chart 1" class="screenshot" style="width: 900px;"/>
+      <img src="assets/usermanual-OPCI-3.png" alt="Chart 1" class="screenshot" style="width: 900px"/>
     </div>  
 
   <p></p>
