--- a/savis4/src/app/user-manual/user-manual-components/correlation/correlation_um.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/correlation/correlation_um.component.html
@@ -13,7 +13,9 @@
     </div>
 
     <div class="image-section">
-      <img src="assets/User-Manual-OPHT1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/User-Manual-Correlation-Image1.png" alt="Correlation Feature Screenshot 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/User-Manual-Correlation-Image2.png" alt="Correlation Feature Screenshot 2" class="screenshot" style="width: 900px;" />
+      <img src="assets/User-Manual-Correlation-Image3.png" alt="Correlation Feature Screenshot 3" class="screenshot" style="width: 900px;" />
     </div>  
 
   <p></p>
