#130: Continue User Manual Translations

--- a/savis4/src/app/user-manual/user-manual.component.html
+++ b/savis4/src/app/user-manual/user-manual.component.html
@@ -4,52 +4,52 @@
   <h1 class="title">{{'uman_title' | translate}}</h1>
   <div class="content">
 
-    <div class="box-container">
+    <div class="box-container bg-lightMintGreen">
       <div class="column">
-        <div class="tool1">{{ "uman_Hypothesis_Testing" | translate }}</div>
+        <div class="tool1">{{ "homepage_Hypothesis_Testing" | translate }}</div>
         <div class="box" routerLink="/opht">
-          {{ "uman_opht" | translate }}
+          {{ "homepage_One_Proportion_Hypothesis_Testing" | translate }}
         </div>
         <div class="box" routerLink="/tpht">
-          {{ "uman_tpht" | translate }}
+          {{ "homepage_Two_Proportion_Hypothesis_Testing" | translate }}
         </div>
         <div class="box" routerLink="/omht">
-          {{ "uman_omht" | translate }}
+          {{ "homepage_One_Mean_Hypothesis_Testing" | translate }}
         </div>
         <div class="box" routerLink="/tmht">
-          {{ "uman_tmht" | translate }}
+          {{ "homepage_Two_Mean_Hypothesis_Testing" | translate }}
         </div>
       </div>
 
       <div class="column">
-        <div class="tool2">{{ 'uman_Graphs' | translate }}</div>
-        <div class="box2" routerLink="/bar-chart">{{ 'uman_bar-chart' | translate }}</div>
-        <div class="box2" routerLink="/dot-plot">{{ 'uman_dot-plot' | translate }}</div>
+        <div class="tool2">{{ 'homepage_Graphs' | translate }}</div>
+        <div class="box2" routerLink="/bar-chart">{{ 'homepage_barChart' | translate }}</div>
+        <div class="box2" routerLink="/dot-plot">{{ 'homepage_dotPlot' | translate }}</div>
       </div>
 
       <div class="column">
-        <div class="tool3">{{ "uman_Regression" | translate }}</div>
+        <div class="tool3">{{ "homepage_Visualization" | translate }}</div>
         <div class="box3" routerLink="/regression">
-          {{ "uman_regression" | translate }}
+          {{ "homepage_Linear_Regression_Visualization" | translate }}
         </div>
         <div class="box3" routerLink="/correlation-manual">
-          {{ "uman_correlation" | translate }}
+          {{ "homepage_Correlation_Visualization" | translate }}
         </div>
       </div>
 
       <div class="column">
-        <div class="tool4">{{ "uman_Confidence_Interval" | translate }}</div>
+        <div class="tool4">{{ "homepage_Confidence_Interval" | translate }}</div>
         <div class="box4" routerLink="/opci">
-          {{ "uman_opci" | translate }}
+          {{ "homepage_One_Proportions_Confidence_Interval" | translate }}
         </div>
         <div class="box4" routerLink="/tpci">
-          {{ "uman_tpci" | translate }}
+          {{ "homepage_Two_Proportions_Confidence_Interval" | translate }}
         </div>
         <div class="box4" routerLink="/omci">
-          {{ "uman_omci" | translate }}
+          {{ "homepage_One_Mean_Confidence_Interval" | translate }}
         </div>
         <div class="box4" routerLink="/tmci">
-          {{ "uman_tmci" | translate }}
+          {{ "homepage_Two_Mean_Confidence_Interval" | translate }}
         </div>
       </div>
     </div>
