--- a/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.scss
+++ b/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.scss
@@ -1,20 +1,22 @@
 .bar-chart-container {
-  padding: 40px;
+  min-height:100vh;
   background-color: var(--fifth-col);
 
   .title {
+    padding-top: 40px;
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 30px;
   }
 
   .back-button {
-    font-weight: bold;
+    margin-left: 40px;
     margin-bottom: 20px;
     margin-top: 20px;
     padding: 10px 15px;
     font-size: 1.2rem;
-    color: var(--second-col);
+    border-radius: 10px;
+    color: beige;
     text-decoration: none;
     cursor: pointer;
     display: inline-block;
@@ -34,6 +36,7 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: 40px;
+    padding-left: 40px;
 
     .text-section {
       flex: 0.6;
