--- a/savis4/src/app/components/language-switcher/language-switcher.component.scss
+++ b/savis4/src/app/components/language-switcher/language-switcher.component.scss
@@ -7,8 +7,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 40px; /* Decreased from 60px */
-  height: 20px; /* Decreased from 34px */
+  width: 40px;
+  height: 20px;
   vertical-align: middle;
 }
 
@@ -33,10 +33,10 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 16px; /* Decreased from 26px */
-  width: 16px; /* Decreased from 26px */
-  left: 2px; /* Decreased from 4px */
-  bottom: 2px; /* Decreased from 4px */
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
@@ -51,14 +51,14 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(20px); /* Decreased from 26px */
-  -ms-transform: translateX(20px); /* Decreased from 26px */
-  transform: translateX(20px); /* Decreased from 26px */
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
 }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 20px; /* Decreased from 34px */
+  border-radius: 20px;
 }
 
 .slider.round:before {
