--- a/savis4/src/app/user-manual/user-manual-components/tmht/tmht.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/tmht/tmht.component.html
@@ -13,7 +13,9 @@
     </div>
 
     <div class="image-section">
-      <img src="assets/User-Manual-OPHT1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/TMHT1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/TMHT2.png" alt="Chart 2" class="screenshot" style="width: 900px;" />
+      <img src="assets/TMHT3.png" alt="Chart 3" class="screenshot" style="width: 900px;" />
     </div>  
 
   <p></p>
