--- a/savis4/src/app/user-manual/user-manual-components/regression/regression.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/regression/regression.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="image-section">
-      <img src="assets/User-Manual-OPHT1.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
+      <img src="assets/regression.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
     </div>  
 
   <p></p>
