#150 JIRA / Practice Problems Module Creation JIRA Description: Create and set up the homework problem webpages. This will involve creating all of the homework pages, including the directory page, and the individual module homework pages. For this commit, I: - Created a new "Problems" button on the navbar that redirects to problems main directory page - Modeled the main problems directory after the user manual page in terms of design - Added buttons that redirect to individual module problems pages on the problems directory page - Created a problems webpage for each individual feature/module (i.e. bar chart problems page) - Copied shell of back buttons from user manual over to problems pages - Created and validated Cypress tests for the problems pages

--- a/savis4/src/app/components/navbar/navbar.component.html
+++ b/savis4/src/app/components/navbar/navbar.component.html
@@ -15,6 +15,9 @@
             <a routerLink="/about" class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-newGreen md:p-0 bg-navbar">{{ 'nav_about' | translate }}</a>
           </li>
           <li>
+            <a routerLink="/problems" class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-newGreen md:p-0 bg-navbar">{{ 'nav_problems' | translate }}</a>
+          </li>
+          <li>
             <a routerLink="/download-page" class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-newGreen md:p-0 bg-navbar">{{ 'nav_download' | translate }}</a>
           </li>
           <li>
