--- a/savis4/src/app/features/linear-regression/linear-regression.component.html
+++ b/savis4/src/app/features/linear-regression/linear-regression.component.html
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="lhs">
       <form #myForm="ngForm">
-        <div class="input-container">
+        <div id="control" class="input-container">
           <label for="dataPoints">{{ 'lr_enter_data' | translate }}:</label>
           <br>
           <textarea 
@@ -31,15 +31,25 @@
           </textarea>
           <!-- <csv-file-upload class="textarea" id="dataPoints" name="dataPoints" [(ngModel)]="datapoints" placeholder="e.g., 1,3\n2,5\n3,7"></csv-file-upload> -->
           <br>
-          <button class="btn" (click)="updateChart()">{{ 'lr_update_chart' | translate }}</button>
-          <label class="file-input mx-2">
-            <input 
-            class="hidden" 
-            type="file" 
-            (change)="onFileSelect($event)" 
-            accept=".csv">
-            <span class="btn">{{ 'lr_choose_file' | translate }}</span>
-          </label>
+          <div class="d-flex">
+            <button class="btn" (click)="updateChart()">{{ 'lr_update_chart' | translate }}</button>
+            <label class="file-input mx-2">
+              <input 
+              class="hidden" 
+              type="file" 
+              (change)="onFileSelect($event)" 
+              accept=".csv">
+              <span class="btn">{{ 'lr_choose_file' | translate }}</span>
+            </label>
+          </div>
+          
+          <!-- Export buttons -->
+          <div class="form-group mt-3">
+            <button class="btn" id="export-pdf-btn" (click)="exportAsPDF()" [disabled]="parsedDatapoints.length === 0">Export as PDF</button>
+          </div>
+          <div class="form-group mt-3">
+            <button class="btn" id="export-docx-btn" (click)="exportAsDOCX()" [disabled]="parsedDatapoints.length === 0">Export as DOCX</button>
+          </div>
           <app-save-load-buttons 
             [data]="datapoints"
             [feature]="'linearRegression'"
