--- a/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
+++ b/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
@@ -132,6 +132,14 @@
             <div class="green-line"></div>
             <br>
             <br>
+            <!-- Export buttons -->
+            <div class="form-group mt-3">
+                <button class="btn" id="export-pdf-btn" (click)="exportAsPDF()" [disabled]="!isExportEnabled">{{ 'opc_export_pdf' | translate }}</button>
+            </div>
+            <div class="form-group mt-3">
+                <button class="btn" id="export-docx-btn" (click)="exportAsDOCX()" [disabled]="!isExportEnabled">{{ 'opc_export_docx' | translate }}</button>
+            </div>
+            
             <div class="stats">
                 <div class="my-4">
                      <span>{{ 'opc_mean' | translate }}</span>
