--- a/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.scss
+++ b/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.scss
@@ -93,7 +93,7 @@ $secondary-color: #93cb52;
 $slider-active-color: var(--ninth-col);
 $slider-track-color: var(--ninth-col);
 
-button {
+button, .btn {
   background: var(--third-col);
   color: white;
   padding: 10px;
