--- a/savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
+++ b/savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
@@ -158,6 +158,14 @@
             <p style="text-align: center;">{{ confidenceIntervalCount }}</p>
             <p style="text-align: left;">{{'omci_NotInInterval'| translate}}</p>
             <p style="text-align: center;">{{ confidenceIntervalCountNot }}</p>
+            
+            <!-- Export buttons -->
+            <div class="form-group mt-3">
+                <button class="btn" id="export-pdf-btn" (click)="exportAsPDF()" [disabled]="!isExportEnabled">{{ 'omci_export_pdf' | translate }}</button>
+            </div>
+            <div class="form-group mt-3">
+                <button class="btn" id="export-docx-btn" (click)="exportAsDOCX()" [disabled]="!isExportEnabled">{{ 'omci_export_docx' | translate }}</button>
+            </div>
         </div>
         <div class="readonly" readonly
         style="width: 150px; height: 300px; border-radius: 10px; display: flex; overflow-x: auto;">
