--- a/savis4/src/app/features/one-mean-ci/one-mean-ci.component.scss
+++ b/savis4/src/app/features/one-mean-ci/one-mean-ci.component.scss
@@ -119,7 +119,7 @@ $secondary-color: #93cb52;
 $slider-active-color: var(--ninth-col);
 $slider-track-color: var(--ninth-col);
 
-button {
+button, .btn {
   background: var(--third-col);
   color: white;
   padding: 10px;
