#151 JIRA/ Develop Initial Features of Homework System

--- a/savis4/src/app/features/bar-chart/bar-chart.component.html
+++ b/savis4/src/app/features/bar-chart/bar-chart.component.html
@@ -9,6 +9,17 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class = "problems-link">
+    <button
+        class = "btn problems-btn"
+        type = "button"
+        [routerLink] ="['/problems-bar-chart']">
+            Bar Chart Practice Problems
+    </button>
+</div>
+    
+
 <div id="bar-chart-tutorial">
     <h1 class="text-center">{{ 'barChart_title' | translate }}</h1>
     <div class="chart-area">
