--- a/savis4/src/app/features/correlation/correlation.component.html
+++ b/savis4/src/app/features/correlation/correlation.component.html
@@ -10,6 +10,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class = "problems-link">
+    <button
+        class = "btn problems-btn"
+        type = "button"
+        [routerLink] ="['/problems-correlation']">
+          Correlation Practice Problems
+    </button>
+</div>
+
 
 <div class="p-4">
   <h1 class="text-2xl font-bold mb-2 text-center">
