--- a/savis4/src/app/features/dot-chart/dot-chart.component.html
+++ b/savis4/src/app/features/dot-chart/dot-chart.component.html
@@ -10,6 +10,15 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+    <button
+        class="btn problems-btn"
+        type="button"
+        [routerLink]="['/problems-dot-plot']">
+            Dot Plot Practice Problems
+    </button>
+</div>
 
 
 <body class="flex flex-col min-h-screen">
