--- a/savis4/src/app/features/linear-regression/linear-regression.component.html
+++ b/savis4/src/app/features/linear-regression/linear-regression.component.html
@@ -12,6 +12,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-regression']">
+      Linear Regression Practice Problems
+  </button>
+</div>
+
 <!-- contents -->
 <h1 class="text-center py-4">{{ 'lr_title' | translate }}</h1>
 <div class="container">
