--- a/savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
+++ b/savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
@@ -10,6 +10,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-omci']">
+        One Mean Confidence Interval Practice Problems
+  </button>
+</div>
+
 <body class="flex flex-col min-h-screen">
 <div id="dot-chart-tutorial">
     <h1 class="text-center">{{ '//omci_One_Mean_Confidence_Interval' | translate }}</h1>
