--- a/savis4/src/app/features/one-proportion/one-proportion.component.html
+++ b/savis4/src/app/features/one-proportion/one-proportion.component.html
@@ -10,6 +10,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-opht']">
+        One Proportion Hypothesis Testing Practice Problems
+  </button>
+</div>
+
 <div class="oneProportion">
   <div class="left-container">
     <div class="controls">
