--- a/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
+++ b/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
@@ -9,6 +9,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-tpci']">
+        Two Proportion Confidence Interval Practice Problems
+  </button>
+</div>
+
 <div class="two-proportions">
   <h1 class="text-center">{{ "tpci_title" | translate }}</h1>
 
