--- a/savis4/src/app/features/dot-chart/dot-chart.component.scss
+++ b/savis4/src/app/features/dot-chart/dot-chart.component.scss
@@ -162,3 +162,18 @@ input[type="checkbox"] {
   align-items: center;
   gap: 0.4rem;
 }
+
+.problems-link{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0.5rem 1rem 0;  
+  margin-top: 16px;
+  margin-bottom: 0.5rem;
+}
+
+.problems-btn{
+  display: inline-flex;
+  align-items: center;
+  gap: 0.4rem;  
+}
