--- a/savis4/src/app/features/one-mean/one-mean.component.html
+++ b/savis4/src/app/features/one-mean/one-mean.component.html
@@ -10,6 +10,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-omht']">
+        One Mean Hypothesis Testing Practice Problems
+  </button>
+</div>
+
 <body class="flex flex-col min-h-screen">
 <div id="dot-chart-tutorial">
     <h1 class="text-center">{{ 'one_mean_hypothesis_testing' | translate }}</h1>
