--- a/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
+++ b/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
@@ -10,6 +10,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-opci']">
+        One Proportion Confidence Interval Practice Problems
+  </button>
+</div>
+
 <div class="one-proportion-ci">
     <div class="title2">
         <h1>{{ 'opc_title' | translate }}</h1>
