--- a/savis4/src/app/features/two-means-ci/two-means-ci.component.html
+++ b/savis4/src/app/features/two-means-ci/two-means-ci.component.html
@@ -9,6 +9,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-tmci']">
+        Two Mean Confidence Interval Practice Problems
+  </button>
+</div>
+
 <div class="p-4">
   <h1 class="text-xl font-bold text-center my-5">{{ 'Tmci_Two_Means_Confidence_Interval' | translate }}
   </h1>
