--- a/savis4/src/app/features/two-means/two-means.component.html
+++ b/savis4/src/app/features/two-means/two-means.component.html
@@ -10,6 +10,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-tmht']">
+        Two Mean Hypothesis Testing Practice Problems
+  </button>
+</div>
+
 <div class="p-4">
   <h1 class="text-xl font-bold text-center my-5">{{'two_mean_title' | translate }}  </h1>
   <div class="flex justify-between">
