--- a/savis4/src/app/features/two-proportions/two-proportions.component.html
+++ b/savis4/src/app/features/two-proportions/two-proportions.component.html
@@ -10,6 +10,16 @@
   </button>
 </div>
 
+<!--link to practice problems-->
+<div class="problems-link">
+  <button
+    class="btn problems-btn"
+    type="button"
+    [routerLink]="['/problems-tpht']">
+        Two Proportion Hypothesis Testing Practice Problems
+  </button>
+</div>
+
 <div class="p-4">
   <div id="two-proportions" class="mb-4">
     <h1 class="text-xl font-bold text-center my-5">{{ 'two_prop_title' | translate }}</h1>
